--- a/index.haml
+++ b/index.haml
@@ -8,7 +8,7 @@
     %link{:href => "reveal/css/reset.css", :rel => "stylesheet"}/
     %link{:href => "reveal/css/main.css", :rel => "stylesheet"}/
     %link{:href => "highlight/src/styles/solarized_dark.css", :rel => "stylesheet"}/
-    %link{:href => "causes.css", :rel => "stylesheet"}/
+    %link{:href => "presentation.css", :rel => "stylesheet"}/
     / overrides for default reveal styles
     :css
       .reveal pre {
